# trading-cli-bot

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
cli/: tbot.py
docs/superpowers/plans/: 2026-06-01-okx-risk-bracket-orders.md
src/trading_gateway/: __init__.py
src/trading_gateway/adapters/: __init__.py
src/trading_gateway/adapters/exchanges/: __init__.py  fees.py  leverage.py  order_params.py  positions.py  rules.py  single_leg.py
src/trading_gateway/app/config/: __init__.py  access.py  loader.py  schema.py
src/trading_gateway/application/risk/: __init__.py  okx_algo.py
src/trading_gateway/application/trade_smoke/: planning.py  trading.py
src/trading_gateway/application/wallet/: summary.py  summary_fast.py  summary_runner.py  wallet.py
src/trading_gateway/domain/: models.py  route_universe.py
src/trading_gateway/infrastructure/exchange/: factory.py  static_client.py
src/trading_gateway/interfaces/cli/: app.py  daemon.py  help.py  lab.py  risk.py  validation.py  wallet.py  web.py
src/trading_gateway/interfaces/daemon/: account_state.py  client.py  runtime.py  serve.py  server.py
src/trading_gateway/interfaces/web/: api.py  jobs.py  ops.py  planning.py  runtime.py  server.py
src/trading_gateway/support/: capabilities.py  tolerance.py
src/trading_gateway/support/formatting/: __init__.py  json_output.py
src/trading_gateway/support/redaction/: __init__.py  core.py
src/trading_gateway/workflows/overview/: planning_account_state.py  planning_provider.py
tests/: test_standalone_cli.py
(+88 files in other folders)
